--- a/Contact Me.html
+++ b/Contact Me.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title> Jamie Christie - Contact Me</title>
-  <link rel="stylesheet" href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\Master.css">
-  <link rel="stylesheet" href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\contact.css">
+  <link rel="stylesheet" href="Master.css">
+  <link rel="stylesheet" href="contact.css">
 </head>
 
 <body>
