--- a/Contact Me.html
+++ b/Contact Me.html
@@ -17,7 +17,7 @@
     <nav class="nav">
     <!-- Navigation menu starts -->
       <ul>
-        <li><a href="indexMe.html">Home Page</a></li>
+        <li><a href="index.html">Home Page</a></li>
         <li><a href="Projects.html">Personal Projects</a></li>
         <li><a href="CV.html">CV Page</a></li>
         <li><a href="Contact Me.html">Contact Me</a></li>
