--- a/projects.html
+++ b/projects.html
@@ -3,8 +3,8 @@
 <head>
   <title>Projects</title>
   <meta charset='UTF-8'>
-  <link rel="stylesheet" href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\Master.css">
-  <link rel="stylesheet" href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\projects.css">
+  <link rel="stylesheet" href="Master.css">
+  <link rel="stylesheet" href="projects.css">
 </head>
 
 <body>
@@ -12,7 +12,7 @@
 <header>
   <!-- Page header begins-->
   <div class="imgContainer">
-    <img src="C:\Users\Jamie\Pictures\iPhone Pictures\Insomnia\IMG_3456.jpg" alt="Picture of me" class="Rotate180">
+    <img src="IMG_3456.jpg" alt="Picture of me" class="Rotate180">
   </div>
 
   <h1>Jamie Christie</h1>
@@ -20,10 +20,10 @@
     <!-- Navigation menu begins-->
 
     <ul>
-      <li><a href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\indexMe.html">Home Page</a></li>
-      <li><a href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\Projects.html">Personal Projects</a></li>
-      <li><a href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\CV.html">CV Page</a></li>
-      <li><a href="C:\Users\Jamie\Documents\Uni Work\Assessment Pages\Contact Me.html">Contact Me</a></li>
+      <li><a href="index.html">Home Page</a></li>
+      <li><a href="projects.html">Personal Projects</a></li>
+      <li><a href="CV.html">CV Page</a></li>
+      <li><a href="Contact Me.html">Contact Me</a></li>
     </ul>
 
     <!-- Navigation menu ends-->
