--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <!-- Navigation menu starts -->
       <ul>
         <li><a href="index.html">Home Page</a></li>
-        <li><a href="Projects.html">Personal Projects</a></li>
+        <li><a href="projects.html">Personal Projects</a></li>
         <li><a href="CV.html">CV Page</a></li>
         <li><a href="Contact Me.html">Contact Me</a></li>
       </ul>
